# libxkbcommon

./: configure.ac  libxkbcommon.pri
